--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,8 +5,8 @@
   "homepage_url": "https://www.avault.finance",
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#1FC7D4",
-  "background_color": "#181733",
+  "theme_color": "#030222",
+  "background_color": "#030222",
   "orientation": "portrait",
   "icons": [
     {
