--- a/.env.development
+++ b/.env.development
@@ -41,14 +41,13 @@ REACT_APP_SNAPSHOT_VOTING_API = "https://voting-api.pancakeswap.info/api"_API_PR
 # https://shiden-api.bwarelabs.com/4e9f6995-e5d0-413b-a75f-16601233f367
 # https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
 # https://evm.shiden.astar.network
-# https://evm.shiden.astar.network
 # https://rpc.shiden.astar.network:8545
 
 # SDN_MAINNET
 REACT_APP_CHAIN_ID = 336
-REACT_APP_NODE_1 =https://evm.shiden.astar.network
-REACT_APP_NODE_2 =https://evm.shiden.astar.network
-REACT_APP_NODE_3 =https://evm.shiden.astar.network
+REACT_APP_NODE_1 =https://shiden-api.bwarelabs.com/4e9f6995-e5d0-413b-a75f-16601233f367
+REACT_APP_NODE_2 =https://shiden-api.bwarelabs.com/4e9f6995-e5d0-413b-a75f-16601233f367
+REACT_APP_NODE_3 =https://shiden-api.bwarelabs.com/4e9f6995-e5d0-413b-a75f-16601233f367
 
 
 # SDN_TESTNET
