--- a/.env.development
+++ b/.env.development
@@ -45,9 +45,9 @@ REACT_APP_SNAPSHOT_VOTING_API = "https://voting-api.pancakeswap.info/api"_API_PR
 
 # SDN_MAINNET
 REACT_APP_CHAIN_ID = 336
-REACT_APP_NODE_1 =https://shiden-api.bwarelabs.com/4e9f6995-e5d0-413b-a75f-16601233f367
-REACT_APP_NODE_2 =https://shiden-api.bwarelabs.com/4e9f6995-e5d0-413b-a75f-16601233f367
-REACT_APP_NODE_3 =https://shiden-api.bwarelabs.com/4e9f6995-e5d0-413b-a75f-16601233f367
+REACT_APP_NODE_1 =https://shiden.blastapi.io/a98a19be-3c39-41bf-befe-5ca901b8695d
+REACT_APP_NODE_2 =https://shiden.blastapi.io/a98a19be-3c39-41bf-befe-5ca901b8695d
+REACT_APP_NODE_3 =https://shiden.blastapi.io/a98a19be-3c39-41bf-befe-5ca901b8695d
 
 
 # SDN_TESTNET
