update rpc link

--- a/.env.production
+++ b/.env.production
@@ -40,9 +40,9 @@ REACT_APP_SNAPSHOT_VOTING_API = "https://voting-api.pancakeswap.info/api"_API_PR
 
 # SDN_MAINNET
 REACT_APP_CHAIN_ID = 336
-REACT_APP_NODE_1 = https://shiden.blastapi.io/a98a19be-3c39-41bf-befe-5ca901b8695d
-REACT_APP_NODE_2 = https://shiden.blastapi.io/a98a19be-3c39-41bf-befe-5ca901b8695d
-REACT_APP_NODE_3 = https://shiden.blastapi.io/a98a19be-3c39-41bf-befe-5ca901b8695d
+REACT_APP_NODE_1 = https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
+REACT_APP_NODE_2 = https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
+REACT_APP_NODE_3 = https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
 
 
 # SDN_TESTNET
