--- a/.env.development
+++ b/.env.development
@@ -27,9 +27,9 @@ REACT_APP_SNAPSHOT_VOTING_API = "https://voting-api.pancakeswap.info/api"_API_PR
 
 # ASTR_MAINNET
 # REACT_APP_CHAIN_ID = 592
-# REACT_APP_NODE_1 = https://rpc.astar.network:8545
-# REACT_APP_NODE_2 = https://rpc.astar.network:8545
-# REACT_APP_NODE_3 = https://rpc.astar.network:8545
+# REACT_APP_NODE_1 = https://astar.api.onfinality.io/public
+# REACT_APP_NODE_2 = https://astar.api.onfinality.io/public
+# REACT_APP_NODE_3 = https://astar.api.onfinality.io/public
 
 # ASTR_TESTNET
 # REACT_APP_CHAIN_ID = 81
@@ -41,7 +41,7 @@ REACT_APP_SNAPSHOT_VOTING_API = "https://voting-api.pancakeswap.info/api"_API_PR
 # https://shiden-api.bwarelabs.com/4e9f6995-e5d0-413b-a75f-16601233f367
 # https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
 # https://evm.shiden.astar.network
-# https://rpc.shiden.astar.network:8545
+# https://shiden.api.onfinality.io/public
 
 # SDN_MAINNET
 REACT_APP_CHAIN_ID = 336
