--- a/.env.development
+++ b/.env.development
@@ -24,12 +24,12 @@ REACT_APP_SNAPSHOT_VOTING_API = "https://voting-api.pancakeswap.info/api"_API_PR
 # REACT_APP_NODE_2 = "https://data-seed-prebsc-1-s1.binance.org:8545"
 # REACT_APP_NODE_3 = "https://data-seed-prebsc-1-s1.binance.org:8545"
 
-
+# change chain
 # ASTR_MAINNET
-# REACT_APP_CHAIN_ID = 592
-# REACT_APP_NODE_1 = https://astar.api.onfinality.io/public
-# REACT_APP_NODE_2 = https://astar.api.onfinality.io/public
-# REACT_APP_NODE_3 = https://astar.api.onfinality.io/public
+REACT_APP_CHAIN_ID = 592
+REACT_APP_NODE_1 = https://astar.api.onfinality.io/public
+REACT_APP_NODE_2 = https://astar.api.onfinality.io/public
+REACT_APP_NODE_3 = https://astar.api.onfinality.io/public
 
 # ASTR_TESTNET
 # REACT_APP_CHAIN_ID = 81
@@ -44,10 +44,10 @@ REACT_APP_SNAPSHOT_VOTING_API = "https://voting-api.pancakeswap.info/api"_API_PR
 # https://shiden.api.onfinality.io/public
 
 # SDN_MAINNET
-REACT_APP_CHAIN_ID = 336
-REACT_APP_NODE_1 =https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
-REACT_APP_NODE_2 =https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
-REACT_APP_NODE_3 =https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
+# REACT_APP_CHAIN_ID = 336
+# REACT_APP_NODE_1 =https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
+# REACT_APP_NODE_2 =https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
+# REACT_APP_NODE_3 =https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
 
 
 # SDN_TESTNET
