--- a/.env.production
+++ b/.env.production
@@ -24,12 +24,12 @@ REACT_APP_SNAPSHOT_VOTING_API = "https://voting-api.pancakeswap.info/api"_API_PR
 # REACT_APP_NODE_2 = "https://data-seed-prebsc-1-s1.binance.org:8545"
 # REACT_APP_NODE_3 = "https://data-seed-prebsc-1-s1.binance.org:8545"
 
-
+# change chain
 # ASTR_MAINNET
-# REACT_APP_CHAIN_ID = 592
-# REACT_APP_NODE_1 = https://astar.api.onfinality.io/public
-# REACT_APP_NODE_2 = https://astar.api.onfinality.io/public
-# REACT_APP_NODE_3 = https://astar.api.onfinality.io/public
+REACT_APP_CHAIN_ID = 592
+REACT_APP_NODE_1 = https://astar.api.onfinality.io/public
+REACT_APP_NODE_2 = https://astar.api.onfinality.io/public
+REACT_APP_NODE_3 = https://astar.api.onfinality.io/public
 
 # ASTR_TESTNET
 # REACT_APP_CHAIN_ID = 81
@@ -37,12 +37,17 @@ REACT_APP_SNAPSHOT_VOTING_API = "https://voting-api.pancakeswap.info/api"_API_PR
 # REACT_APP_NODE_2 = https://rpc.shibuya.astar.network:8545
 # REACT_APP_NODE_3 = https://rpc.shibuya.astar.network:8545
 
+# https://shiden.api.onfinality.io/rpc?apikey=d5da52f9-c548-4d48-8a7b-2ebb4d5d8959
+# https://shiden-api.bwarelabs.com/4e9f6995-e5d0-413b-a75f-16601233f367
+# https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
+# https://evm.shiden.astar.network
+# https://shiden.api.onfinality.io/public
 
 # SDN_MAINNET
-REACT_APP_CHAIN_ID = 336
-REACT_APP_NODE_1 = https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
-REACT_APP_NODE_2 = https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
-REACT_APP_NODE_3 = https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
+# REACT_APP_CHAIN_ID = 336
+# REACT_APP_NODE_1 =https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
+# REACT_APP_NODE_2 =https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
+# REACT_APP_NODE_3 =https://shiden-api.bwarelabs.com/2a7ff4f5-ca95-4c7a-a300-0114fb8a6525
 
 
 # SDN_TESTNET
