--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "prettier": "^2.3.0",
     "readline": "^1.3.0",
     "source-map-explorer": "^2.5.2",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "apr-tools": "^0.1.3"
   }
 }
