--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     ]
   },
   "dependencies": {
-    "@polkadot/api": "6.0.5",
-    "@polkadot/extension-dapp": "0.40.3",
-    "@polkadot/types": "6.0.5",
     "@binance-chain/bsc-connector": "^1.0.0",
     "@ethersproject/experimental": "^5.0.1",
     "@my/sdk": "./toolkit/packages/swap-sdk",
     "@my/ui": "./toolkit/packages/uikit",
+    "@polkadot/api": "6.0.5",
+    "@polkadot/extension-dapp": "0.40.3",
+    "@polkadot/types": "6.0.5",
     "@reduxjs/toolkit": "^1.5.0",
     "@types/multicodec": "^1.0.0",
     "@types/node": "^13.13.5",
@@ -47,6 +47,7 @@
     "@types/react-window": "^1.8.3",
     "@types/styled-components": "^5.1.7",
     "@types/styled-system": "^5.1.10",
+    "@uauth/web3-react": "^2.0.0",
     "@uniswap/token-lists": "^1.0.0-beta.19",
     "@uniswap/v2-core": "^1.0.0",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
@@ -85,8 +86,8 @@
     "remark-gfm": "^1.0.0",
     "split-grid": "^1.0.11",
     "styled-components": "^5.3.0",
-    "swiper": "^6.6.1",
     "styled-system": "^5.1.5",
+    "swiper": "^6.6.1",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
@@ -98,6 +99,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-transition-group": "^4.4.1",
     "@types/simplemde": "^1.11.7",
+    "apr-tools": "^0.1.3",
     "csvtojson": "^2.0.10",
     "eslint": "^7.26.0",
     "eslint-plugin-prettier": "^3.4.0",
@@ -105,7 +107,6 @@
     "prettier": "^2.3.0",
     "readline": "^1.3.0",
     "source-map-explorer": "^2.5.2",
-    "ts-node": "^9.1.1",
-    "apr-tools": "^0.1.3"
+    "ts-node": "^9.1.1"
   }
 }
