--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.4",
+    "@talismn/web3react-v6-connector": "^6.0.1",
     "ajv": "^6.12.3",
     "bignumber.js": "^9.0.0",
     "canvas-confetti": "^1.3.3",
